--- a/src/TableX/Cell.module.css
+++ b/src/TableX/Cell.module.css
@@ -5,5 +5,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: flex;
   /* transition: all 0.112s ease-in-out; */
 }
