--- a/src/TableX/TableX.module.css
+++ b/src/TableX/TableX.module.css
@@ -1,10 +1,14 @@
 .container {
   width: 100%;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: start;
-  align-items: start;
   height: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
+}
+
+.table {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: start;
 }
