--- a/src/TableX/Header.module.css
+++ b/src/TableX/Header.module.css
@@ -1,25 +1,5 @@
 .container {
   width: 100%;
   display: flex;
-}
-
-.cell {
-  padding: 0.5rem 1rem;
-  position: relative;
-  border: 1px solid #000000aa;
-  user-select: none;
-}
-
-.resizer {
-  width: 0.2rem;
-  height: 100%;
-  background-color: grey;
-  position: absolute;
-  right: 0;
-  top: 0;
-  opacity: 0;
-}
-
-.resizer:hover {
-  opacity: 1;
+  background-color: #fff;
 }
